# mini-llm-server

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: download_model.py
server/: config.py  serve.py
