[project]
name = "mini-llm-server"
version = "0.1.0"
description = "vLLM OpenAI-compatible server for NVIDIA Nemotron 3 Nano 4B FP8."
requires-python = ">=3.12,<3.13"
dependencies = [
    # NVIDIA requires vllm >= 0.15.1 for Nemotron 3 Nano (hybrid Mamba+Attn).
    # Pinned at 0.19.1: this is the latest version whose PyPI wheel is built
    # against CUDA 12.8 (libcudart.so.12). vllm 0.20+ wheels link libcudart.so.13
    # and require driver ≥580. The driver on RunPod's PyTorch 2.x template is 570
    # (max CUDA 12.8), so cu130 wheels fail with "NVIDIA driver too old" / cudart
    # ImportError.
    "vllm==0.19.1",
    "huggingface_hub[hf_transfer]>=1.0",
    "python-dotenv>=1.0",
    # Direct-pin torch so [tool.uv.sources] below routes it to the cu128 index.
    # vllm 0.19.1 requires torch==2.10.0; default PyPI build is +cu130.
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
]

[tool.uv]
package = false

# Driver on this host supports CUDA 12.8 max — pin torch to the cu128 wheel
# index so we don't pull a cu130 build that fails to initialize CUDA.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
