[project]
name = "mini-llm-server"
version = "0.1.0"
description = "vLLM OpenAI-compatible server for NVIDIA Nemotron 3 Nano 4B FP8."
requires-python = ">=3.12,<3.13"
dependencies = [
    # NVIDIA requires vllm >= 0.15.1 for Nemotron 3 Nano (hybrid Mamba+Attn).
    # 0.20.1 ships the streaming reasoning↔tool-call fixes (PR #30671 et al.)
    # that the nano_v3 reasoning parser needs to keep tool calls intact.
    # The default PyPI wheel links libcudart.so.13 and needs driver ≥580 —
    # the host pod must run a CUDA 13 / driver ≥580 RunPod template.
    "vllm==0.20.1",
    "huggingface_hub[hf_transfer]>=1.0",
    "python-dotenv>=1.0",
    # vllm 0.20.1 requires torch==2.11.0. Routed through the cu130 index below.
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
]

[tool.uv]
package = false

# Pin torch to the cu130 wheel index — matches vllm 0.20.x's libcudart.so.13
# linkage. Requires the host pod to be on a CUDA 13 / driver ≥580 template.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
